Moving & upgrading : Cleanup libraries and resources